# SPDetectionSurroundingsOfCar

./: .gitignore  README.md  inception_sync  inception_sync_  makefile
Doc/Diploma/CzechThesisExample/: diploma.cls  main.tex  makefile
Source/PROJEKT/: CMakeLists.txt  main.cpp  opencv.pc  opencv_link.txt  opencv_qlink2.txt
Source/PROJEKT/src/: Network.cpp  Network.h
Source/PROJEKT/utils/: Utils.cpp  Utils.h
include/: Utils.h
src/: Utils.cpp  main.cpp
src/dlib_rear_end_vehicles/: README.txt  testing.xml  training.xml
